--- a/package.json
+++ b/package.json
@@ -20,23 +20,41 @@
     "@angular/http": "4.1.3",
     "@angular/platform-browser": "4.1.3",
     "@angular/platform-browser-dynamic": "4.1.3",
+    "@ionic-native/camera": "3.12.1",
     "@ionic-native/core": "3.12.1",
+    "@ionic-native/facebook": "^4.2.1",
+    "@ionic-native/geolocation": "^4.2.1",
+    "@ionic-native/google-maps": "3.12.1",
+    "@ionic-native/native-geocoder": "^4.2.1",
     "@ionic-native/splash-screen": "3.12.1",
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
+    "@ngx-translate/core": "6.0.1",
+    "@ngx-translate/http-loader": "0.0.3",
+    "angularfire2": "^4.0.0-rc.2",
+    "cordova-plugin-facebook4": "^1.9.1",
+    "cordova-plugin-geolocation": "^2.4.3",
+    "firebase": "^4.3.1",
     "ionic-angular": "3.6.1",
     "ionicons": "3.0.0",
+    "ngx-facebook": "^2.4.0",
+    "promise-polyfill": "^6.0.2",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.12",
-    "@ionic-native/camera": "3.12.1",
-    "@ionic-native/google-maps": "3.12.1",
-    "@ngx-translate/core": "6.0.1",
-    "@ngx-translate/http-loader": "0.0.3"
+    "zone.js": "0.8.12"
   },
   "devDependencies": {
     "@ionic/app-scripts": "2.1.4",
     "typescript": "2.3.4"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-facebook4": {
+        "APP_ID": "459416244410212",
+        "APP_NAME": "AguaMineral"
+      },
+      "cordova-plugin-geolocation": {}
+    }
+  }
 }
