--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "@ionic/storage": "2.0.1",
     "@ngx-translate/core": "6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
+    "angular2-resizing-cropping-image": "^1.0.0-final.4",
     "angularfire2": "^4.0.0-rc.2",
     "cordova-android": "^6.2.3",
+    "cordova-browser": "~5.0.1",
     "cordova-plugin-camera": "^2.4.1",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-console": "^1.0.5",
@@ -51,8 +53,7 @@
     "promise-polyfill": "^6.0.2",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.12",
-    "cordova-browser": "~5.0.1"
+    "zone.js": "0.8.12"
   },
   "devDependencies": {
     "@ionic/app-scripts": "2.1.4",
