--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ngx-translate/http-loader": "0.0.3",
     "angular2-resizing-cropping-image": "^1.0.0-final.4",
     "angularfire2": "^4.0.0-rc.2",
+    "blueimp-canvas-to-blob": "^3.14.0",
     "cordova-android": "^6.2.3",
     "cordova-browser": "~5.0.1",
     "cordova-plugin-camera": "^2.4.1",
@@ -49,6 +50,7 @@
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "ng2-img-cropper": "^0.9.0",
+    "ng2-img-max": "^2.1.6",
     "ngx-facebook": "^2.4.0",
     "promise-polyfill": "^6.0.2",
     "rxjs": "5.4.0",
