--- a/package.json
+++ b/package.json
@@ -34,17 +34,17 @@
     "angular2-resizing-cropping-image": "^1.0.0-final.4",
     "angularfire2": "^4.0.0-rc.2",
     "blueimp-canvas-to-blob": "^3.14.0",
-    "cordova-android": "^6.2.3",
+    "cordova-android": "6.2.3",
     "cordova-browser": "~5.0.1",
     "cordova-plugin-camera": "^2.4.1",
     "cordova-plugin-compat": "^1.2.0",
-    "cordova-plugin-console": "^1.0.5",
-    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-console": "^1.1.0",
+    "cordova-plugin-device": "^1.1.6",
     "cordova-plugin-facebook4": "^1.9.1",
     "cordova-plugin-geolocation": "^2.4.3",
     "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.2.2",
-    "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-plugin-statusbar": "^2.2.3",
+    "cordova-plugin-whitelist": "^1.3.2",
     "firebase": "^3.9.0",
     "ionic-angular": "3.6.1",
     "ionic-plugin-keyboard": "^2.2.1",
