--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
     "firebase": "^3.9.0",
     "ionic-angular": "3.6.1",
     "ionic-plugin-keyboard": "^2.2.1",
+    "ionic2-auto-complete": "^1.5.3-beta",
     "ionicons": "3.0.0",
     "ng2-img-cropper": "^0.9.0",
     "ng2-img-max": "^2.1.6",
+    "ng2-order-pipe": "^0.1.5",
     "ngx-facebook": "^2.4.0",
     "promise-polyfill": "^6.0.2",
     "rxjs": "5.4.0",
