--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic/storage": "2.0.1",
     "@ngx-translate/core": "6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
+    "angular2-moment": "^1.7.1",
     "angular2-resizing-cropping-image": "^1.0.0-final.4",
     "angularfire2": "^4.0.0-rc.2",
     "blueimp-canvas-to-blob": "^3.14.0",
